Stop horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -24,5 +24,5 @@
 
 body, html {
   overscroll-behavior: none;
-  overflow-x: hidden;
+  max-width: 100%;
 }
